cabal-version:      3.0
name:               witweave
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             wodishly
maintainer:          
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable witweave
    import:           warnings
    main-is:          Main.hs
    default-extensions:
        LambdaCase
        OverloadedStrings
        LexicalNegation
        NamedFieldPuns
        TupleSections
        FlexibleContexts

    other-modules:
        Spider
        Spinner
        Weaver
    -- other-extensions:
    build-depends:
        base,
        diagrams-lib,
        diagrams-svg,
        colour,
        text,
        containers

    hs-source-dirs:   app
    default-language: Haskell2010
