cabal-version: 3.0
name: witweave
version: 0.1.0.0
license: AGPL-3.0-or-later
license-file: LICENSE
author: wodishly
category: Graphics
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall
    -Wno-orphans

executable witweave
  import: warnings
  main-is: Main.hs
  default-extensions:
    DuplicateRecordFields
    FlexibleContexts
    LambdaCase
    LexicalNegation
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    TupleSections

  other-modules:
    Spider
    Spinner
    Weever
    Weaver

  build-depends:
    base,
    colour,
    containers,
    diagrams-lib,
    diagrams-svg,
    directory,
    lens,
    text,

  hs-source-dirs: app
  default-language: Haskell2010
