cabal-version: 3.0
name: witweave
version: 0.1.1.0
license: AGPL-3.0-or-later
license-file: LICENSE
author: wodishly
category: Graphics
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall
    -Wno-orphans

executable witweave
  import: warnings
  main-is: Main.hs

  default-extensions:
    DuplicateRecordFields,
    FlexibleContexts,
    LambdaCase,
    LexicalNegation,
    NamedFieldPuns,
    OverloadedRecordDot,
    OverloadedStrings,
    TupleSections,

  other-modules:
    Spider,
    Spinner,
    Weever,
    Weaver,

  build-depends:
    base ^>=4.18.3.0,
    colour ^>=2.3.6,
    diagrams-lib ^>=1.5.0.1,
    diagrams-svg ^>=1.5,
    directory ^>=1.3.8.5,
    lens ^>=5.3.5,
    megaparsec ^>=9.7.0,
    text ^>=2.1.3,

  hs-source-dirs: app
  default-language: Haskell2010
